force-app/main/default/objects/Account/fields/AccChkbox__c.field-meta.xml
<CustomField>
    <fullName>AccChkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AccChkbox</label>
    <type>Checkbox</type>
</CustomField>