force-app/main/default/objects/Account/fields/Haim_Data__c.field-meta.xml
<CustomField>
    <fullName>Haim_Data__c</fullName>
    <label>|Haim Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>