force-app/main/default/objects/Account/fields/Info_secT1__c.field-meta.xml
<CustomField>
    <fullName>Info_secT1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Info-secT1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>