force-app/main/default/objects/Account/fields/Longtext__c.field-meta.xml
<CustomField>
    <fullName>Longtext__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Longtext</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>