force-app/main/default/objects/Account/fields/Sort_Text_Field__c.field-meta.xml
<CustomField>
    <fullName>Sort_Text_Field__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>Sort Text Field</label>
    <length>20</length>
    <type>Text</type>
</CustomField>