force-app/main/default/objects/Account/fields/testURLFIeld__c.field-meta.xml
<CustomField>
    <fullName>testURLFIeld__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>testURLFIeld</label>
    <type>Url</type>
</CustomField>