force-app/main/default/objects/Account/recordTypes/NonPA.recordType-meta.xml
<RecordType>
    <fullName>NonPA</fullName>
    <active>true</active>
    <label>NonPA</label>
</RecordType>